--- a/style.css
+++ b/style.css
@@ -15,7 +15,8 @@ h1 {
 h2 {
     font-family: 'Amatic SC', cursive;
     color: grey;
-    font-size:30px;
+    font-size:10px;
+}
 
 .header {
     text-align: center;
